# CaffeDeepSpeech2

./: README.md  audio_data_loader.py  ds2_cont_filler_layer.py  ds2_ctc_loss_layer.py  ds2_data_layer.py  ds2_transpose_layer.py  solver.prototxt  test.prototxt  train.prototxt  train.prototxt.lstm  train.prototxt.lstm2
ctc/: CMakeLists.txt
ctc/caffe_binding/: README.md  setup.py
ctc/caffe_binding/src/: binding.cpp  cpu_binding.h
ctc/caffe_binding/tests/: test.py  test.py.bak  test.py.mid  test.py.org
ctc/caffe_binding/warpctc_caffe/: __init__.cpp  __init__.pyx
ctc/src/: ctc_entrypoint.cpp
